--- a/DSS_metadata/VIPS.yaml
+++ b/DSS_metadata/VIPS.yaml
@@ -2,19 +2,20 @@
 # (c) 2020 Tor-Einar Skog <tor-einar.skog@nibio.no>
 ---
 # General info about the DSS
-DSS_name: "VIPS"
-Public_URL: "https://www.vips-landbruk.no/"
-Contact_email: "berit.nordskog@nibio.no"
+DSS_id: VIPS
+DSS_name: VIPS
+Public_URL: https://www.vips-landbruk.no/
+Contact_email: berit.nordskog@nibio.no
 Login_required: false
 DSS_Owner: 
- name: "NIBIO"
- country: "Norway"
- address: "Postboks 115"
+ name: NIBIO
+ country: Norway
+ address: Postboks 115
  postal_code: "1431"
- city: "Ås"
+ city: Ås
 Languages:
-- "Norwegian"
-- "English"
+- Norwegian
+- English
 # From here on we get model specific
 # There may be many DSS models per DSS
 # They should have their separate list entry
@@ -23,51 +24,59 @@ Languages:
 # We use these parameters/codes for weather data: 
 # https://github.com/H2020-IPM-Decisions/formats/blob/master/weather_data/weather_parameters_draft_v1.txt
 DSS_models:
-- DSS_model_name: "Carrot rust fly temperature model"
+- DSS_model_name: Carrot rust fly temperature model
+  DSS_model_id: PSILARTEMP
   Pests: 
   - PSILRO # EPPO code for carrot rust fly
   Crops:
   - DAUCS # EPPO code for carrot
-  Type_of_decision: "Short-term tactical"
-  Type_of_output: "Risk indication"
-  Description_URL: "https://www.vips-landbruk.no/forecasts/models/PSILARTEMP/"
+  Type_of_decision: Short-term tactical
+  Type_of_output: Risk indication
+  Description_URL: https://www.vips-landbruk.no/forecasts/models/PSILARTEMP/
   Description: |
     The warning system model «Carrot rust fly temperature» is based on a Finnish temperature-based model (Markkula et al, 1998; Tiilikkala & Ojanen, 1999; Markkula et al, 2000). The model determines the start of the flight period for the 1st and 2nd generation of carrot rust fly based on accumuleted degree-days (day-degrees) over a base temperature of 5,0 °C. VIPS uses the model for the 1st generation only. 
     Standard air temperature (temperature measured 2 m above ground) is used in the model. Degree-days are defined for this model as the sum of the difference between a base temperature of 5,0 °C and the mean temperature for all days with a temperature >5,0 °C, in other words (daily mean temperature – 5,0 °C) from 1 March (beginning when the ground has thawed).
   Input:
-   Weather: # TODO: weather parameter codes
-   - parameter_code: 1001 # = Mean temp at 2 mLookup
-     sampling_frequency: "Day" # The least detail accepted (higher frequencies can aggregate to lower)
+   Weather: # TODO: 
+   - parameter_code: 1001 # = Mean temp at 2m
+     sampling_frequency: Day # The least detail accepted (higher frequencies can aggregate to lower)
   How_to_run:
     Type: ONTHEFLY
     Endpoint: https://coremanager.vips.nibio.no/models/PSILARTEMP/run
+    Form_method: post # Could be get or post
+    Content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
 # The input template should adhere to the JSON Schema standard: https://json-schema.org/
     Input_schema: |
       {
         "type":"object",
         "properties": {
-          "modelId": {"type": "string", "pattern":"^PSILARTEMP$"},
-          "configParameters" {
+          "modelId": {"type": "string", "pattern":"^PSILARTEMP$", "title": "Model Id (Must be PSILARTEMP)"},
+          "configParameters": {
+            "title":"Configuration parameters",
             "type": "object",
             "properties": {
-              "timeZone": {"type": "string"},
-              "calculationStart": {"type": "date-time"},
-              "calculationEnd": {"type": "date-time"}
-            }
+              "timeZone": {"type": "string", "title": "Time zone (e.g. Europe/Oslo)"},
+              "calculationStart": {"type":"string","format": "date", "title": "Start date of calculation (YYYY-MM-DD)"},
+              "calculationEnd": {"type":"string","format": "date", "title": "End date of calculation (YYYY-MM-DD)"}
+            },
+            "required": ["timeZone","calculationStart","calculationEnd"]
           },
           "weatherData": {
             "$ref": "https://ipmdecisions.nibio.no/WeatherService/rest/schema/weatherdata"
           }
-        }
+        },
+        "required": ["modelId","configParameters"]
+      }
 ###########
-- DSS_model_name: "Nærstad model"
+- DSS_model_name: Nærstad model
+  DSS_model_id: NAERSTADMO
   Pests:
   - PHYTIN # EPPO code for Potato late blight (Phytophthora infestans)
   Crops:
   - SOLTU # EPPO code for potato
-  Type_of_decision: "Short-term tactical"
-  Type_of_output: "Risk indication"
-  Description_URL: "https://www.vips-landbruk.no/forecasts/models/NAERSTADMO/"
+  Type_of_decision: Short-term tactical
+  Type_of_output: Risk indication
+  Description_URL: https://www.vips-landbruk.no/forecasts/models/NAERSTADMO/
   Description: |
     The model is based on several years of experiments where trap plants have been placed next to a potato field infected with late blight. Infections on these plants have been correlated with weather conditions the day of exposure, and this is the data the model is based on. The model predicts if there are favourable conditions for spore production and the following spread, survival and infection of these spores. The model produces an infection risk, and a value of 2.5 corresponds to one spot of late blight on each trap plant exposed. This value of 2.5 is the threshold where the model issues a warning.
   Input:
@@ -85,35 +94,41 @@ DSS_models:
   How_to_run:
     Type: ONTHEFLY
     Endpoint: https://coremanager.vips.nibio.no/models/NAERSTADMO/run
+    Form_method: post # Could be get or post
+    Content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
 # The input template should adhere to the JSON Schema standard: https://json-schema.org/
     Input_schema: |
       {
         "type":"object",
         "properties": {
-          "modelId": {"type": "string", "pattern":"^NAERSTADMO$"},
-          "configParameters" {
+          "modelId": {"type": "string", "pattern":"^NAERSTADMO$", "title": "Model Id (Must be NAERSTADMO)"},
+          "configParameters": {
             "type": "object",
+            "title":"Configuration parameters",
             "properties": {
-              "timeZone": {"type": "string"},
-              "calculationStart": {"type": "date-time"},
-              "calculationEnd": {"type": "date-time"}
-            }
+              "timeZone": {"type": "string", "title": "Time zone (e.g. Europe/Oslo)"},
+              "calculationStart": {"type": "string","format": "date", "title": "Start date of calculation (YYYY-MM-DD)"},
+              "calculationEnd": {"type": "string","format": "date", "title": "End date of calculation (YYYY-MM-DD)"}
+            },
+            "required": ["timeZone","calculationStart","calculationEnd"]
           },
           "weatherData": {
             "$ref": "https://ipmdecisions.nibio.no/WeatherService/rest/schema/weatherdata"
           }
-        }
-
+        },
+        "required": ["modelId","configParameters"]
+      }
 
 #####
-- DSS_model_name: "Septoria apiicola model"
+- DSS_model_name: Septoria apiicola model
+  DSS_model_id: SEPAPIICOL
   Pests: 
   - SEPTAP # EPPO code
   Crops:
-  - APUGD # EPPO code for potato
-  Type_of_decision: "Short-term tactical"
-  Type_of_output: "Risk indication"
-  Description_URL: "https://www.vips-landbruk.no/forecasts/models/SEPAPIICOL/"
+  - APUGD # EPPO code for celery
+  Type_of_decision: Short-term tactical
+  Type_of_output: Risk indication
+  Description_URL: https://www.vips-landbruk.no/forecasts/models/SEPAPIICOL/
   Description: |
     This model is based on a calculation of how leaf wetness periods influence infection of celery by Septoria apiicola in susceptible host plants.
     
@@ -125,40 +140,46 @@ DSS_models:
   Input:
    Weather: # TODO: weather parameter codes, frequency codes and unit codes
    - parameter_code: 3101  # Leaf wetness duration. Measured in minutes with wetness per period 
-     sampling_frequency: "Hour"
+     sampling_frequency: Hour
    Field_observation:
     species: SEPTAP
   How_to_run:
     Type: ONTHEFLY
     Endpoint: https://coremanager.vips.nibio.no/models/SEPAPIICOL/run
+    Form_method: post # Could be get or post
+    Content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
 # The input template should adhere to the JSON Schema standard: https://json-schema.org/
     Input_schema: |
       {
         "type":"object",
-        
         "properties": {
-          "modelId": {"type": "string", "pattern":"^SEPAPIICOL$"},
-          "configParameters" {
+          "modelId": {"type": "string", "pattern":"^SEPAPIICOL$", "title": "Model Id (Must be SEPAPIICOL)"},
+          "configParameters": {
+            "title":"Configuration parameters",
             "type": "object",
             "properties": {
-              "timeZone": {"type": "string"},
-              "startDateGrowth": {"type": "date"},
-              "endDateCalculation": {"type": "date"},
+              "timeZone": {"type": "string", "title": "Time zone (e.g. Europe/Oslo)"},
+              "startDateGrowth": {"type": "string", "format":"date", "title": "Start date of growth (YYYY-MM-DD)"},
+              "endDateCalculation": {"type": "string", "format":"date", "title": "End date of calculation (YYYY-MM-DD)"},
               "pestObservations": {
+                "title" : "Pest observations",
                 "type": "array",
                 "items": {
                   "type": "object",
                   "properties": {
-                    "timeOfObservation": {"type": "date-time"},
-                    "species":{"type": "string", "pattern": "^[A-Z0-9]{5,6}$"}
+                    "timeOfObservation": {"type":"string", "format": "date-time", "title":"Time of observation (e.g. 2018-11-13T20:20:39+00:00)"},
+                    "species":{"type": "string", "pattern": "^[A-Z0-9]{5,6}$", "title":"EPPO Code for species (Should be SEPTAP)"}
                   }
                 }
               }
-            }
+            },
+            "required": ["timeZone","startDateGrowth","endDateCalculation"]
           },
           "weatherData": {
             "$ref": "https://ipmdecisions.nibio.no/WeatherService/rest/schema/weatherdata"
           }
-        }
+        },
+        "required": ["modelId","configParameters"]
+      }
 
 
