--- a/DSS_metadata/VIPS.yaml
+++ b/DSS_metadata/VIPS.yaml
@@ -38,11 +38,11 @@ DSS_models:
     Standard air temperature (temperature measured 2 m above ground) is used in the model. Degree-days are defined for this model as the sum of the difference between a base temperature of 5,0 °C and the mean temperature for all days with a temperature >5,0 °C, in other words (daily mean temperature – 5,0 °C) from 1 March (beginning when the ground has thawed).
   Input:
    Weather: # TODO: 
-   - parameter_code: 1001 # = Mean temp at 2m
-     sampling_frequency: Day # The least detail accepted (higher frequencies can aggregate to lower)
+   - parameter_code: 1002 # = Mean air temp at 2m
+     interval: 86400 # Sampling interval in seconds (3600 * 24 = 86400)
   How_to_run:
     Type: ONTHEFLY
-    Endpoint: https://coremanager.vips.nibio.no/models/PSILARTEMP/run
+    Endpoint: http://vipscore/models/PSILARTEMP/run/ipmd
     Form_method: post # Could be get or post
     Content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
 # The input template should adhere to the JSON Schema standard: https://json-schema.org/
@@ -56,10 +56,10 @@ DSS_models:
             "type": "object",
             "properties": {
               "timeZone": {"type": "string", "title": "Time zone (e.g. Europe/Oslo)"},
-              "calculationStart": {"type":"string","format": "date", "title": "Start date of calculation (YYYY-MM-DD)"},
-              "calculationEnd": {"type":"string","format": "date", "title": "End date of calculation (YYYY-MM-DD)"}
+              "timeStart": {"type":"string","format": "date", "title": "Start date of calculation (YYYY-MM-DD)"},
+              "timeEnd": {"type":"string","format": "date", "title": "End date of calculation (YYYY-MM-DD)"}
             },
-            "required": ["timeZone","calculationStart","calculationEnd"]
+            "required": ["timeZone","timeStart","timeEnd"]
           },
           "weatherData": {
             "$ref": "https://ipmdecisions.nibio.no/WeatherService/rest/schema/weatherdata"
@@ -76,24 +76,24 @@ DSS_models:
   - SOLTU # EPPO code for potato
   Type_of_decision: Short-term tactical
   Type_of_output: Risk indication
-  Description_URL: https://www.vips-landbruk.no/forecasts/models/NAERSTADMO/
+  Description_URL: https://www.vips-landbruk.no/forecasts/models/NAERSTADMO/ 
   Description: |
     The model is based on several years of experiments where trap plants have been placed next to a potato field infected with late blight. Infections on these plants have been correlated with weather conditions the day of exposure, and this is the data the model is based on. The model predicts if there are favourable conditions for spore production and the following spread, survival and infection of these spores. The model produces an infection risk, and a value of 2.5 corresponds to one spot of late blight on each trap plant exposed. This value of 2.5 is the threshold where the model issues a warning.
   Input:
    Weather: # TODO: weather parameter codes, frequency codes and unit codes
-   - parameter_code: 1001 # = Mean temp at 2m measured in Celcius.
-     sampling_frequency: "Hour" # The least detail accepted (higher frequencies can aggregate to lower)
+   - parameter_code: 1002 # = Mean temp at 2m measured in Celcius.
+     interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
    - parameter_code: 2001 # Precipitation measured in mm. 
-     sampling_frequency: "Hour" # The least detail accepted (higher frequencies can aggregate to lower)
+     interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
    - parameter_code: 5001 # Global radiation in W/sqm. 
-     sampling_frequency: "Hour" # The least detail accepted (higher frequencies can aggregate to lower)
+     interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
    - parameter_code: 3002 # Relative humidity at 2m in % 
-     sampling_frequency: "Hour" # The least detail accepted (higher frequencies can aggregate to lower)
+     interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
    - parameter_code: 3101  # Leaf wetness duration. Measured in minutes with wetness per period 
-     sampling_frequency: "Hour" # The least detail accepted (higher frequencies can aggregate to lower)
+     interval: 3600 # The least detail accepted (higher frequencies can aggregate to lower)
   How_to_run:
     Type: ONTHEFLY
-    Endpoint: https://coremanager.vips.nibio.no/models/NAERSTADMO/run
+    Endpoint: http://vipscore/models/NAERSTADMO/run/ipmd
     Form_method: post # Could be get or post
     Content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
 # The input template should adhere to the JSON Schema standard: https://json-schema.org/
@@ -107,10 +107,10 @@ DSS_models:
             "title":"Configuration parameters",
             "properties": {
               "timeZone": {"type": "string", "title": "Time zone (e.g. Europe/Oslo)"},
-              "calculationStart": {"type": "string","format": "date", "title": "Start date of calculation (YYYY-MM-DD)"},
-              "calculationEnd": {"type": "string","format": "date", "title": "End date of calculation (YYYY-MM-DD)"}
+              "timeStart": {"type": "string","format": "date", "title": "Start date of calculation (YYYY-MM-DD)"},
+              "timeEnd": {"type": "string","format": "date", "title": "End date of calculation (YYYY-MM-DD)"}
             },
-            "required": ["timeZone","calculationStart","calculationEnd"]
+            "required": ["timeZone","timeStart","timeEnd"]
           },
           "weatherData": {
             "$ref": "https://ipmdecisions.nibio.no/WeatherService/rest/schema/weatherdata"
@@ -140,12 +140,12 @@ DSS_models:
   Input:
    Weather: # TODO: weather parameter codes, frequency codes and unit codes
    - parameter_code: 3101  # Leaf wetness duration. Measured in minutes with wetness per period 
-     sampling_frequency: Hour
+     interval: 3600
    Field_observation:
     species: SEPTAP
   How_to_run:
     Type: ONTHEFLY
-    Endpoint: https://coremanager.vips.nibio.no/models/SEPAPIICOL/run
+    Endpoint: http://vipscore/models/SEPAPIICOL/run/ipmd
     Form_method: post # Could be get or post
     Content_type: application/json # Regular forms: application/x-www-form-urlencoded , Regular forms with files (<input type="file">): multipart/form-data
 # The input template should adhere to the JSON Schema standard: https://json-schema.org/
